# ChangeLog for app-admin/profiler
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/profiler/ChangeLog,v 1.9 2006/09/07 19:31:31 dang Exp $

  07 Sep 2006; Daniel Gryniewicz <dang@gentoo.org> profiler-1.ebuild:
  Marked stable on amd64 for bug #146741

  03 Dec 2005; Joshua Nichols <nichoj@gentoo.org> profiler-1.ebuild:
  Added ~amd64 keyword.

  17 Oct 2004; Thomas Matthijs <axxo@gentoo.org> profiler-1.ebuild:
  dojar --> java-pkg_dojar

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> profiler-1.ebuild:
  Masked profiler-1.ebuild stable for ppc

  03 Sep 2004; David Holm <dholm@gentoo.org> profiler-1.ebuild:
  Added to ~ppc.

  06 Jun 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
  profiler-1.ebuild:
  QA - IUSE fix

*profiler-1 (10 Jul 2003)

  10 Jul 2003; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me.