@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/profiler
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/profiler/ChangeLog,v 1.9 2006/09/07 19:31:31 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/profiler/ChangeLog,v 1.10 2006/09/12 19:38:59 nelchael Exp $
+
+*profiler-1-r1 (12 Sep 2006)
+
+  12 Sep 2006; Krzysiek Pawlik <nelchael@gentoo.org> +profiler-1-r1.ebuild:
+  Migrated to new Java build system.
 
   07 Sep 2006; Daniel Gryniewicz <dang@gentoo.org> profiler-1.ebuild:
   Marked stable on amd64 for bug #146741
